--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
         rel="stylesheet">
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Orbitron">
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 <body>
   <app-root></app-root>
-
 </body>
 </html>
