--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <title>STABROS</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="Usługi rolnicze, mulczowanie, zrębka, koszenie, zrębkowanie, odśnieżanie">
+  <meta name="description" content="Usługi rolnicze">
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
   <link rel="stylesheet"
