fix navigation - navigation without reloading, add tel and mail tags, add google analytics support

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>STABROS</title>
+  <title>STABROS - usługi rolnicze, koszenie, mulczowanie, zrębka</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="Usługi rolnicze, mulczowanie, zrębka, koszenie, zrębkowanie, odśnieżanie">
-  <meta name="description" content="Usługi rolnicze">
+  <meta name="keywords" content="Usługi rolnicze, koszenie traw, mulczowanie, zrębka, koszenie, zrębkowanie, odśnieżanie">
+  <meta name="description" content="Usługi rolnicze, koszenie kosiarką bijakową (rozdrobnienie zielonej masy),
+  kosiarką rotacyjną z możliwością zbioru, wycinka drzew oraz usługi rębakiem, mulczowanie.
+  W sezonie zimowym zajmujemy się utrzymaniem dróg, placów, parkingów."/>
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
@@ -14,6 +16,15 @@
         href="https://fonts.googleapis.com/css?family=Orbitron">
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Montserrat">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156848100-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-156848100-2');
+  </script>
 </head>
 <body>
   <app-root></app-root>
